fixed project card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -185,10 +185,10 @@ a:hover{
 
 .project-section{
   background: var(--lightShade);
-  display: grid;
 }
 .project-wrap{
-  margin-left: auto !important;
+  display: flex;
+  justify-content: center;
   /* Not working?? Project cards are off center on narrow screens */
 }
 
@@ -202,8 +202,9 @@ a:hover{
   background: var(--lightAccent); /* Eventually add custom colors for each project */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   margin-left: 2%;
-  margin-right: 0%;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: 0.3s;
   max-width: 82vw !important;
   min-height: 175px !important;
